omq-zeromq/tests/trybuild/compat-fail/socket_options_mutating_builder.rs
use std::time::Duration;
use zeromq::SocketOptions;

fn main() {
    let mut options = SocketOptions::default();
    options.no_connect_timeout();
    options.connect_timeout(Duration::from_secs(5));
}
